--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap");
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+:root {
+  --primaryFont: "Work Sans", sans-serif;
+}
+#root {
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background: #91cb3e;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+@media only screen and (max-width: 320px) {
+  body {
+    min-width: auto;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+  text-decoration: none;
+}
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+img {
+  width: 100%;
+}
+
+.container {
+  max-width: 1410px;
+  margin: 0 auto;
+  width: 90%;
+}
+.highlightedText {
+  position: relative;
+  color: transparent;
+  text-shadow: 0 0 10px #c44a85;
+  padding: 5px;
+}
+
+.textContainer {
+  background-color: #c44a85;
+  padding: 10px;
+  display: inline-block;
 }
