--- a/src/components/Roadmap/Roadmap.module.css
+++ b/src/components/Roadmap/Roadmap.module.css
@@ -33,21 +33,23 @@
 .rocket {
   display: block;
   max-width: 500px;
-  width: 100%;
+  width: 50%;
 }
 .flower {
   max-width: 750px;
 
   display: block;
-  width: 100%;
+  width: 50%;
 }
 .cashier {
   max-width: 605px;
   display: block;
+  width: 50%;
 }
 .reverse {
   max-width: 554px;
   display: block;
+  width: 50%;
 }
 .imageContainer2 {
   display: flex;
@@ -58,6 +60,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.forgive {
+  width: 50%;
+  max-width: 682px;
+}
+.forgiveWith {
+  width: 50%;
+  max-width: 800px;
 }
 .pistol {
   max-width: 500px;
